--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 
 # TLS
 server.ssl.algorithm=${TLS_VERSION:TLSv1.2}
-server.ssl.key-store=${KEYSTORE:classpath:message.keystore.p12}
+server.ssl.key-store=${KEYSTORE:src/main/resources/message.keystore.p12}
 server.ssl.key-store-password=${KEYSTORE_PASSWORD:password}
 server.ssl.key-alias=${KEYSTORE_ALIAS:message}
-server.ssl.trust-store=${TRUSTSTORE:classpath:message.truststore.p12}
+server.ssl.trust-store=${TRUSTSTORE:src/main/resources/message.truststore.p12}
 server.ssl.trust-store-password=${TRUSTSTORE_PASSWORD:password}
 server.ssl.enabled=true
-server.ssl.client-auth=want
+server.ssl.client-auth=need
