--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_DB:microservices}?currentSchema=${DATABASE_SCHEMA:messages}
 spring.datasource.username=${DATABASE_USER:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:admin}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 
 spring.datasource.data = classpath:/data-postgres.sql
 
